--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   <body>
     <div id="app"></div>
     <!-- built files will be auto injected -->
-    <!-- <script src="/socket.io/socket.io.js"></script> -->
+    <script src="/socket.io/socket.io.js"></script>
+    <script>
+     var socket = '123';
+    </script>
   </body>
 </html>
