--- a/index.html
+++ b/index.html
@@ -3,12 +3,14 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+    rel="stylesheet">
     <title>vue-project</title>
   </head>
   <body>
     <div id="app"></div>
     <!-- built files will be auto injected -->
-    <script src="/socket.io/socket.io.js"></script>
+    <!-- <script src="/socket.io/socket.io.js"></script> -->
     <script>
      var socket = '123';
     </script>
